# interact-mcp

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md  mcp-tester.agent.md
src/interact_mcp/: actions.py  browser.py  config.py  desktop.py  server.py  state.py  vision.py
src/interact_mcp/js/: annotate_elements.js  dnd_dispatch.js  list_clickable.js
tests/: conftest.py  live_desktop_test.py  test_actions.py  test_browser.py  test_config.py  test_desktop.py  test_e2e_vscode.py  test_integration.py  test_live_suite.py  test_observe.py  test_state.py
vscode-extension/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/scripts/: generate-models.py
vscode-extension/src/: extension.ts  models.json
