[project]
name = "interact-mcp"
version = "0.1.0"
description = "MCP server for browser interaction with vision analysis"
readme = "README.md"
authors = [
    { name = "Alan Blanchet", email = "alan@alan-blanchet.fr" }
]
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.83.4",
    "mcp[cli]>=1.27.0",
    "playwright>=1.58.0",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
interact-mcp = "interact_mcp.server:main"
